PSP/Proyectos/LoginSpring_AdrianSaavedra/src/main/java/org/example/loginspring_adriansaavedra/common/errors/PlayerAlreadyExistsException.java
package org.example.loginspring_adriansaavedra.common.errors;

public class PlayerAlreadyExistsException extends RuntimeException{
    public PlayerAlreadyExistsException(String message) {
        super(message);
    }
}
